Assignment2/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routing
  namespace: gateway-demo
spec:
  parentRefs:
  - name: envoy-gateway

  hostnames:
  - web.company.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-routing
  namespace: gateway-demo
spec:
  parentRefs:
  - name: envoy-gateway

  hostnames:
  - api.company.local

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: httpbin
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-routing
  namespace: gateway-demo
spec:
  parentRefs:
  - name: envoy-gateway

  hostnames:
  - test.company.local

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: echoserver
      port: 80
